--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -13,7 +13,7 @@ spec:
     - http:
         paths:
           - backend:
-              serviceName: krampoline
-              servicePort: 3000
-            # 여러분의 app path 를 넣어주세요.
-            path: /kd2a4d8394030a(/|$)(.*)
+              serviceName: nginx-service
+              servicePort: 80
+              path: /
+              pathType: Prefix
